--- a/style.css
+++ b/style.css
@@ -1,130 +1,134 @@
 .avtorizacija {
-    background-size: 100% 100%;
-    background-position: center;
-    background-image: url("https://static.overlay-tech.com/assets/18b9dfb5-30ed-4b28-8032-90d37be5e477.png");
-    padding: 18px 132px 60px 138px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .flex-wrapper-one {
-    background-color: rgba(255, 255, 255, 0.3);
-    margin-bottom: 125px;
-    margin-left: 39px;
-    border-radius: 25px;
-    padding: 9px 58px 33px 57px;
-    box-shadow: 0 4px 4px 0 var(--transparent-black);
-    position: relative;
-  }
-  .labelmer {
-    height: 26px;
-    width: 132px;
-    font-family: "Forum";
-    font-size: 24px;
-    font-weight: 400;
-    line-height: normal;
-    color: rgba(162, 189, 211, 1);
-    display: flex;
-    text-align: right;
-    position: absolute;
-    left: 57px;
-    bottom: 18px;
-  }
-  .labelvsu {
-    height: 78px;
-    width: 130px;
-    font-family: "Fira Sans Extra Condensed";
-    font-size: 72px;
-    font-weight: 400;
-    line-height: normal;
-    color: rgba(93, 189, 243, 1);
-    display: flex;
-    text-align: right;
-    position: relative;
-  }
-  .username-label {
-    height: 17px;
-    width: 258px;
-    font-family: "Sansation Light";
-    font-size: 18px;
-    font-weight: 300;
-    line-height: normal;
-    color: rgba(65, 129, 168, 1);
-    display: flex;
-    margin-bottom: 3px;
-  }
-  .user-name-area {
-    width: 337px;
-    height: 27px;
-    background-color: var(--white);
-    margin-bottom: 14px;
-    border: 1px solid rgba(65, 129, 168, 0.65);
-  }
-  .pass-label {
-    height: 16px;
-    width: 258px;
-    font-family: "Sansation Light";
-    font-size: 18px;
-    font-weight: 300;
-    line-height: normal;
-    color: rgba(65, 129, 168, 1);
-    display: flex;
-    margin-bottom: 5px;
-  }
-  .pass-area {
-    width: 337px;
-    height: 26px;
-    background-color: var(--white);
-    margin-bottom: 35px;
-    border: 1px solid rgba(65, 129, 168, 0.65);
-  }
-  .flex-wrapper-two {
-    display: flex;
-    align-items: flex-start;
-  }
-  .enter-button {
-    background-color: rgba(162, 190, 226, 0.33);
-    margin-right: 16px;
-    border-radius: 18px;
-    padding: 8px 0 8px 38px;
-    box-shadow: 0 4px 4px 0 var(--transparent-black);
-    display: flex;
-    align-items: center;
-  }
-  .b1label {
-    height: 19px;
-    width: 87px;
-    font-family: "Sansation Light";
-    font-size: 18px;
-    font-weight: 300;
-    line-height: normal;
-    color: rgba(74, 155, 205, 1);
-    display: flex;
-  }
-  .group-10 {
-    background-color: rgba(162, 190, 226, 0.33);
-    border-radius: 18px;
-    padding: 8px 12px 7px 16px;
-    box-shadow: 0 4px 4px 0 var(--transparent-black);
-    display: flex;
-    align-items: center;
-  }
-  .reg-label {
-    /*font-family: "Sansation Light";*/
-    font-size: 18px;
-    font-weight: 300;
-    line-height: normal;
-    color: rgba(74, 155, 205, 1);
-  }
+  background-size: 100% 100%;
+  background-position: center;
+  background-image: url("https://static.overlay-tech.com/assets/18b9dfb5-30ed-4b28-8032-90d37be5e477.png");
+  padding: 18px 132px 60px 138px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 
-  :root {
-    /* Colors */
-    --black: rgba(0, 0, 0, 1);
-    --dim-gray: rgba(131, 109, 109, 1);
-    --light-steel-blue: rgba(148, 186, 203, 1);
-    --silver: rgba(200, 196, 196, 1);
-    --slate-gray: rgba(101, 137, 153, 1);
-    --thistle: rgba(229, 193, 193, 1);
-    --transparent-black: rgba(0, 0, 0, 0.25);
-    --white: rgba(255, 255, 255, 1);
-  }
+body{
+  background-color: rgb(233,233,233);
+}
+
+.flex-wrapper-one {
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 125px;
+  margin-left: 430px;
+  border-radius: 25px;
+  padding: 0px 150px 2px 100px;
+  box-shadow: 0 4px 4px 0 var(--transparent-black);
+  position: relative;
+}
+
+.labelmer {
+  height: 26px;
+  width: 132px;
+  font-family: "Forum";
+  font-size: 24px;
+  font-weight: 400;
+  line-height: normal;
+  color: rgba(162, 189, 211, 1);
+  display: flex;
+  text-align: right;
+  position: absolute;
+  left: 118px;
+  bottom: 18px;
+}
+
+.labelvsu {
+  height: 78px;
+  width: 130px;
+  font-family: "Fira Sans Extra Condensed";
+  font-size: 72px;
+  font-weight: 400;
+  line-height: normal;
+  color: rgba(93, 189, 243, 1);
+  display: flex;
+  text-align: right;
+  position: relative;
+}
+
+.username-label {
+  height: 17px;
+  width: 258px;
+  font-family: "Sansation Light";
+  font-size: 18px;
+  font-weight: 300;
+  line-height: normal;
+  color: rgba(65, 129, 168, 1);
+  display: flex;
+  margin-bottom: 3px;
+}
+
+.user-name-area {
+  width: 337px;
+  height: 27px;
+  background-color: var(--white);
+  margin-bottom: 14px;
+  border: 1px solid rgba(65, 129, 168, 0.65);
+}
+
+.pass-label {
+  height: 16px;
+  width: 258px;
+  font-family: "Sansation Light";
+  font-size: 18px;
+  font-weight: 300;
+  line-height: normal;
+  color: rgba(65, 129, 168, 1);
+  display: flex;
+  margin-bottom: 5px;
+}
+
+.flex-wrapper-two {
+  display: flex;
+  align-items: flex-start;
+}
+
+.b1label {
+  height: 40px;
+  width: 100px;
+  font-family: "Sansation Light";
+  font-size: 18px;
+  font-weight: 300;
+  line-height: normal;
+  color: rgba(74, 155, 205, 1);
+  display: flex;
+  padding: 8px 15px 8px 23px;
+  background-color: rgba(162, 190, 226, 0.33);
+  border-color: rgba(133, 157, 189, 0.33);
+  margin-right: 16px;
+  border-radius: 18px;
+  box-shadow: 0 4px 4px 0 var(--transparent-black);
+  display: flex;
+  align-items: center;
+}
+
+.reg-label {
+  font-family: "Sansation Light";
+  font-size: 18px;
+  font-weight: 300;
+  line-height: normal;
+  color: rgba(74, 155, 205, 1);
+  background-color: rgba(162, 190, 226, 0.33);
+  border-radius: 18px;
+  padding: 8px 12px 7px 16px;
+  box-shadow: 0 4px 4px 0 var(--transparent-black);
+  display: flex;
+  border-color: rgba(133, 157, 189, 0.33);
+  align-items: center;
+}
+
+:root {
+  /* Colors */
+  --black: rgba(0, 0, 0, 1);
+  --dim-gray: rgba(131, 109, 109, 1);
+  --light-steel-blue: rgba(148, 186, 203, 1);
+  --silver: rgba(200, 196, 196, 1);
+  --slate-gray: rgba(101, 137, 153, 1);
+  --thistle: rgba(229, 193, 193, 1);
+  --transparent-black: rgba(0, 0, 0, 0.25);
+  --white: rgba(255, 255, 255, 1);
+}
