--- a/Authorization/style.css
+++ b/Authorization/style.css
@@ -11,7 +11,7 @@
 
 .logo {
   width: 300px;
-  margin-left: -130px;
+  margin-left: -70px;
   padding-left: 15px;
   margin-top: -55px;
 }
@@ -61,32 +61,34 @@ body{
   margin-left: auto;
   margin-right: auto;
   background-color: rgba(255, 255, 255, 0.3);
-  margin-bottom: 125px;
+  margin-bottom: 55px;
   border-radius: 25px;
   padding: 0px 150px 2px 100px;
   box-shadow: 0 4px 4px 0 var(--transparent-black);
-  width: 100px;
+  width: 200px;
+  height: 250px;
   position: relative;
+
 }
 
 .labelmer {
 
   transform: rotate(90deg);
-  border-bottom: 1.5px solid #d1af69;
+  border-bottom: 2px dashed #d1af69;
   line-height: 1.5em;
   height: 50px;
 
-  padding-top: 175px;
+  padding-top: 150px;
   padding-left: 0px;
 
   font-family: "Forum", serif;
-  font-size: 34px;
+  font-size: 25px;
   font-weight: 600;
-  color: #263145;
+  color: rgba(38, 49, 69, 0.49);
   display: flex;
   text-align: right;
   position: absolute;
-  left: 270px;
+  left: 335px;
   bottom: 0px;
 }
 
@@ -120,6 +122,7 @@ body{
   height: 27px;
   background-color: var(--white);
   margin-bottom: 14px;
+  border-radius: 5px;
   border: 1px solid rgba(65, 129, 168, 0.65);
 }
 
